# rtwo

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/db/: mod.rs
src/ollama/: mod.rs
