[package]
name = "rtwo"
version = "0.1.2"
authors = ["James Andrus"]
license = "GPL-3.0"
edition = "2021"
description = "CLI interface for Ollama written in Rust"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/jandrus/"
repository = "https://github.com/jandrus/"
exclude = ["demo"]

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.82"
bat = "0.24.0"
chrono = "0.4.38"
clap = "4.5.4"
colored = "2.1.0"
dialoguer = "0.11.0"
directories = "5.0.1"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["json"] }
rusqlite = "0.31.0"
serde = "1.0.200"
serde_derive = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.12"
